<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.DetailActivity">

    <ImageView
        android:id="@+id/img_avatar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/avatar"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_created_at"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="@string/created_at"
        android:layout_marginTop="8dp"
        android:textAppearance="?attr/textAppearanceBody2"
        android:textColor="?android:attr/textColorSecondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_username" />

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textAppearance="?attr/textAppearanceHeadline6"
        app:layout_constraintTop_toBottomOf="@id/img_avatar"
        app:layout_constraintEnd_toEndOf="@id/img_avatar"
        app:layout_constraintStart_toStartOf="@+id/img_avatar"
        tools:text="@string/username" />

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceBody2"
        android:textColor="?android:attr/textColorSecondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_created_at"
        tools:text="@string/description" />


</androidx.constraintlayout.widget.ConstraintLayout>